--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "template",
   "version": "0.0.0",
   "private": true,
+  "main": "./server.js",
   "scripts": {
     "test": "jest",
     "start": "cross-env NODE_ENV=production node ./server.js",
