--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "./server.js",
   "scripts": {
     "test": "jest",
-    "start": "cross-env NODE_ENV=production node ./server.js",
+    "start": "node server.js",
+    "start:old": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
     "start:dev1": "cross-env NODE_ENV=development nodemon ./app_conspect_5-9_dopmat.js",
+    "build": "mkdir dist && node server.js",
     "lint": "eslint **/*.js",
     "lint:fix": "eslint --fix **/*.js"
   },
