--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,5 @@
 {
-  "functions": [
-    {
-      "source": "functions",
-      "codebase": "default",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log"
-      ]
-    }
-  ]
+  "storage": {
+    "rules": "storage.rules"
+  }
 }
