--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "3.3.4",
+    "node-fetch": "2.6.9",
     "nodemailer": "^6.9.0",
     "supertest": "^6.3.3",
     "uniqid": "^5.4.0",
